# uart-ble

./: .gitignore  CMakeLists.txt  README.md  README.rst  nrf52840dk_nrf52840.overlay  prj.conf
src/: config.h  ipc.c  ipc.h  main.c
src/ble/: ble_service.c  ble_service.h
src/producers/: producer_a.c  producer_b.c  producers.h
src/proto/: ab_payload.c  ab_payload.h  parser_worker.c  parser_worker.h  payload.c  payload.h
src/serial/: serial_io.c  serial_io.h
src/workers/: bt_rx_worker.c  bt_rx_worker.h  tx_worker.c  tx_worker.h
